--- a/src/stylesheets/components/_hero.scss
+++ b/src/stylesheets/components/_hero.scss
@@ -17,7 +17,7 @@
     z-index: -10;
     width: 100%;
   
-    img {
+    .hero__background__image {
       width: 100%;
       height: 100vh;
       object-fit: cover;
