--- a/src/stylesheets/pages/_work.scss
+++ b/src/stylesheets/pages/_work.scss
@@ -158,7 +158,7 @@
   z-index: 1;
   
   &__content {
-    padding-bottom: 3rem;
+    padding-bottom: 6rem;
   }
 
   &__stat {
@@ -197,15 +197,19 @@
       justify-content: space-between;
     }
 
+    &__stat {
+      padding-top: 9rem;
+    }
+
     &__content {
-      padding-bottom: 6rem;
+      padding-bottom: 9rem;
     }
   }
 
   @include for-desktop-up {
     &__content {
-      padding-top: 2rem;
-      padding-bottom: 10rem;
+      padding-top: 5rem;
+      padding-bottom: 14rem;
     }
 
     &__value {
